--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap");
 
-:root {
-    --white: #fff;
-    --black: #1c2b2d;
-    --blue: #31326f;
-    --light-blue: #005490;
-    --color-primary: #9d0191;
-    --color-sec: #db6400;
-    --grey: #eee;
-    --dark-grey: #222831;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -23,7 +12,7 @@ html {
 
 body {
     font-family: "Open Sans", sans-serif;
-    background-color: var(--grey);
+    background-color: #eee;
 }
 
 p {
@@ -52,20 +41,20 @@ img {
     width: 30rem;
     height: 35rem;
     margin: 0 auto;
-    background-color: gray;
+    background-color: #a9a9a9;
     padding: 1.5rem;
     border-radius: 3px;
     position: relative;
 }
 
 .result {
-    color: darkgray;
-    background-color: white;
+    color: #222831;
+    background-color: #fff;
     height: 4.5rem;
     width: 70%;
     border-radius: 3px;
     margin-bottom: 5px;
-    border: 2px solid var(--color-sec);
+    border: 2px solid #db6400;
     padding: 1rem;
     overflow: hidden;
 }
@@ -79,7 +68,7 @@ img {
     right: 2rem;
     top: 1.6rem;
     border-radius: 3px;
-    color: white;
+    color: #fff;
     cursor: pointer;
     text-align: center;
     font-size: 1.6rem;
@@ -95,23 +84,23 @@ img {
 .keys li {
     list-style: none;
     width: 5rem;
-    background-color: white;
+    background-color: #fff;
     margin: 1rem 0.5rem;
     padding: 1rem;
-    border-bottom: 1px solid var(--color-primary);
+    border-bottom: 1px solid #9d0191;
     border-radius: 3px;
-    color: darkgray;
+    color: #222831;
     text-align: center;
     cursor: pointer;
     transition: all 0.1s;
 }
 
 .keys li:hover {
-    background-color: var(--color-primary);
-    color: white;
+    background-color: #9d0191;
+    color: #fff;
 }
 
 .keys .equals {
     background-color: orangered;
-    color: white;
+    color: #fff;
 }
